# sciqlop-plugins

./: .gitignore  README.md  conftest.py
.github/workflows/: compat.yml  release.yml
cdf_workbench/: README.md  __init__.py  file_view.py  inspector.py  loader.py  plugin.json  pyproject.toml  quality.py  tree_model.py  workbench.py
cdf_workbench/cdf_workbench/: __init__.py  file_view.py  inspector.py  lint.py  plugin.json  preview.py  quality.py  tree_model.py  workbench.py
cdf_workbench/cdf_workbench/docs/: 2026-03-20-cdf-workbench-plan.md
cdf_workbench/cdf_workbench/tests/: conftest.py  test_file_view.py  test_integration.py  test_loader.py  test_preview.py  test_preview_hints.py  test_quality.py  test_workbench.py
cdf_workbench/docs/: 2026-03-20-cdf-workbench-design.md
cdf_workbench/tests/: conftest.py  test_tree_model.py
docs/: handover-radio-speasy-catalog-2026-05-25.md
docs/superpowers/plans/: 2026-04-12-msa-live-smoothing.md  2026-05-12-sciqlop-radio.md  2026-05-12-sciqlop_sismo.md  2026-05-16-sciqlop-opencode-plugin.md  2026-05-22-curated-radio-products-from-speasy.md  2026-05-25-radio-vp-metadata-and-plot-hints.md  2026-06-07-radio-dock-fido-search.md  2026-06-15-radio-live-streams.md
docs/superpowers/specs/: 2026-04-12-msa-live-smoothing-design.md  2026-05-12-sciqlop-radio-design.md  2026-05-12-sciqlop_sismo-design.md  2026-05-16-sciqlop-opencode-plugin-design.md  2026-05-22-curated-radio-products-from-speasy-design.md  2026-05-25-radio-vp-metadata-and-plot-hints-design.md  2026-06-07-radio-dock-fido-search-design.md  2026-06-15-radio-live-streams-design.md
sciqlop_albert/: pyproject.toml
sciqlop_albert/sciqlop_albert/: __init__.py  backend.py  plugin.json  settings.py
sciqlop_claude/: README.md  pyproject.toml
sciqlop_claude/sciqlop_claude/: __init__.py  backend.py  plugin.json  sessions.py
sciqlop_copilot/: README.md  pyproject.toml
sciqlop_copilot/sciqlop_copilot/: __init__.py  auth.py  backend.py  plugin.json  settings.py
sciqlop_copilot/sciqlop_copilot/tests/: conftest.py  test_auth.py  test_settings.py
sciqlop_msa/: __init__.py  inventory.yaml  plugin.py  pyproject.toml  quicklooks.py
sciqlop_msa/sciqlop_msa/: inventory.yaml  plugin.json  quicklooks.py
sciqlop_opencode/: README.md  conftest.py  pyproject.toml
sciqlop_opencode/sciqlop_opencode/: __init__.py  backend.py  plugin.json  sessions.py
sciqlop_opencode/sciqlop_opencode/tests/: conftest.py  test_backend_hook.py  test_backend_models.py  test_plugin_metadata.py  test_sessions.py
sciqlop_radio/: README.md  pyproject.toml
sciqlop_radio/sciqlop_radio/: __init__.py  catalog.py  continuous.py  dock.py  fetch.py  hints.py  lofar.py  plot.py  plugin.json  query.py  radio_catalog.yaml  reader.py  settings.py  sources.py  streams.py
sciqlop_radio/sciqlop_radio/tests/: conftest.py  test_catalog.py  test_continuous.py  test_continuous_cache.py  test_dock.py  test_fetch.py  test_fetch_live.py  test_hints.py  test_import.py  test_load.py  test_lofar.py  test_open_and_convert_cache.py  test_plot_translator.py  test_query.py  test_reader.py  test_settings.py  test_sources_registry.py  test_streams.py
sciqlop_sismo/: README.md  pyproject.toml
sciqlop_sismo/sciqlop_sismo/: __init__.py  dock.py  dock_events.py  dock_local.py  dock_stations.py  fdsn_client.py  local_files.py  plugin.json  process.py  provider.py  settings.py  stream_to_variable.py
sciqlop_sismo/sciqlop_sismo/tests/: conftest.py  test_dock.py  test_fdsn_client.py  test_fdsn_client_live.py  test_load.py  test_local_files.py  test_process.py  test_provider.py  test_provider_cache.py  test_settings.py  test_stream_to_variable.py
