[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqlop-copilot"
version = "0.1.0"
description = "GitHub Copilot Chat backend for SciQLop — OpenAI-compatible API with tool calling, OAuth device-flow login"
requires-python = ">=3.10"
dependencies = ["SciQLop>=0.12.0", "httpx>=0.25"]

[project.entry-points."sciqlop.plugins"]
sciqlop_copilot = "sciqlop_copilot"

[tool.setuptools.packages.find]
include = ["sciqlop_copilot*"]

[tool.setuptools.package-data]
sciqlop_copilot = ["plugin.json", "resources/*"]
