[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqlop-msa"
version = "0.1.0"
description = "SciQLop plugin for BepiColombo MSA instrument data"
requires-python = ">=3.10"
dependencies = ["speasy"]

[tool.setuptools.packages.find]
include = ["sciqlop_msa*"]

[tool.setuptools.package-data]
sciqlop_msa = ["plugin.json", "inventory.yaml"]
