[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqlop-msa"
version = "0.2.1"
description = "SciQLop plugin for BepiColombo MSA instrument data"
requires-python = ">=3.10"
dependencies = ["speasy", "SciQLop>=0.12.0,<0.14.0"]

[project.entry-points."sciqlop.plugins"]
sciqlop_msa = "sciqlop_msa"

[tool.setuptools.packages.find]
include = ["sciqlop_msa*"]

[tool.setuptools.package-data]
sciqlop_msa = ["plugin.json", "inventory.yaml"]
