[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqlop-radio"
version = "0.1.0"
description = "Heliospheric radio dynamic-spectra browser for SciQLop (wraps sunpy.radiospectra)"
requires-python = ">=3.12"
dependencies = [
    "SciQLop>=0.12.0,<0.13.0",
    # radiospectra `main` (0.6.2.dev) uses sunpy.net.scraper.Scraper(format=...),
    # which only exists on sunpy >= 7. The previous released radiospectra 0.6.1
    # used the legacy `Scraper(url, regex=True)` signature and needed sunpy < 7.
    # The installed + tested combo is sunpy 7.x + radiospectra main. Swap the
    # git URL for a version pin once radiospectra publishes the format= release.
    "sunpy[net]>=7",
    "radiospectra @ git+https://github.com/sunpy/radiospectra.git@main",
    "astropy",
    "numpy>=1.24",
    "pydantic>=2.0",
    "speasy>=1.7",
    "pyyaml",
]

[project.optional-dependencies]
test = ["pytest", "pytest-qt"]

[project.entry-points."sciqlop.plugins"]
sciqlop_radio = "sciqlop_radio"

[tool.setuptools.packages.find]
include = ["sciqlop_radio*"]

[tool.setuptools.package-data]
sciqlop_radio = ["plugin.json", "radio_catalog.yaml"]
