[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqlop-radio"
version = "0.2.0"
description = "Heliospheric radio dynamic-spectra browser for SciQLop (wraps sunpy.radiospectra)"
requires-python = ">=3.12"
dependencies = [
    "SciQLop>=0.12.0,<0.14.0",
    # radiospectra >= 0.7.0 ships the sunpy.net.scraper.Scraper(format=...)
    # change (requires sunpy[net] >= 7.0, py >= 3.12) that we previously tracked
    # off a git commit. Now on PyPI, so pin the released version. radiospectra
    # already pulls sunpy[net] >= 7.0; the explicit pin documents intent. All
    # live Fido searches re-validated against 0.7.0 + sunpy 7.1.2.
    "sunpy[net]>=7",
    "radiospectra>=0.7.0",
    "astropy",
    "numpy>=1.24",
    "pydantic>=2.0",
    "speasy>=1.7",
    "pyyaml",
]

[project.optional-dependencies]
test = ["pytest", "pytest-qt"]

[project.entry-points."sciqlop.plugins"]
sciqlop_radio = "sciqlop_radio"

[tool.setuptools.packages.find]
include = ["sciqlop_radio*"]

[tool.setuptools.package-data]
sciqlop_radio = ["plugin.json", "radio_catalog.yaml"]
