[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sciqlop-sismo"
version = "0.1.0"
description = "SciQLop plugin for FDSN/ObsPy seismic waveforms"
requires-python = ">=3.10"
dependencies = [
    "obspy>=1.4",
    "speasy>=1.7",
    "numpy",
    "scipy",
    "pydantic>=2",
    "PyYAML",
    "SciQLop>=0.12.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-qt"]

[project.entry-points."sciqlop.plugins"]
sciqlop_sismo = "sciqlop_sismo"

[tool.setuptools.packages.find]
include = ["sciqlop_sismo*"]

[tool.setuptools.package-data]
sciqlop_sismo = ["plugin.json"]

[tool.pytest.ini_options]
markers = ["live: tests that hit real FDSN data centers (slow; skipped by default)"]
addopts = "-m 'not live'"
